# preppin-data

./: .gitignore  README.md  preppin-data.code-workspace  pyproject.toml
2024/01/: 2024_01.ipynb  pd_2024_01.py
2024/01/input/: 2024_01.csv
2024/02/: 2024_02.ipynb
2024/03/: 2024_03.ipynb
2024/04/: 2024_04.ipynb
2024/05/: 2024_05.ipynb
2024/05/data/: my_output.xlsx
2024/06/: 2024_06.ipynb
scripts/: download_csv.py
src/preppin_data/: __init__.py
src/preppin_data/y2024/w01/: 2024_01.ipynb  pd_2024_01.py  pd_2024_01_runner.py
src/preppin_data/y2024/w03/: 2024_03.ipynb
